# tiPhone

./: .gitignore  Brainstorming.md  LICENSE  README.md
client/: README.md
client-web/: .env.prod  index.html  index.js  index.ts  package-lock.json  package.json
documentation/: README.mc  concept.md
hardware/: README.md
server/: Dockerfile  README.md  pyproject.toml  requirements.txt
server/database/: database.sql  db_api.py
server/src/tiphone_server/: dataTypes.py  main.py  websocketsManager.py
