[project]
name = "tiPhone-server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tuer-zhou", email = "erwin.zhou26@gmail.com"},
]
dependencies = [
    "aiortc>=1.14.0",
    "fastapi[standard]>=0.136.1",
    "websockets>=16.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
